array functions plus testing. todo: jsdoc

--- a/test/allTest.html
+++ b/test/allTest.html
@@ -79,6 +79,7 @@
 </div>
 
 <script type="module" src="../src/kolibri/stdlibTest.js" ></script>
+<script type="module" src="../src/kolibri/arrayTest.js" ></script>
 
 </body>
 </html>
