observable incl. tests, todo: jsdoc.

--- a/test/allTest.html
+++ b/test/allTest.html
@@ -80,6 +80,7 @@
 
 <script type="module" src="../src/kolibri/stdlibTest.js" ></script>
 <script type="module" src="../src/kolibri/arrayTest.js" ></script>
+<script type="module" src="../src/kolibri/observableTest.js" ></script>
 
 </body>
 </html>
