jsdocing util/dom

--- a/src/allTests.html
+++ b/src/allTests.html
@@ -40,7 +40,7 @@
             justify-self: end;
         }
         #grossTotal {
-            padding: 1.5em;
+            padding-top: 1.5em;
         }
         footer {
             position: fixed;
@@ -60,6 +60,7 @@
 <div id="out"></div>
 
 <p id="grossTotal">Check console for possible errors.</p>
+<p>131 tests expected.</p>
 
 
 <footer></footer>
