docs: change to trigger gh-pages deploy

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	<footer>
 		<h2>Contact</h2>
 		<address>
-            <a href="https://dierk.github.io/Home">Prof. D. König</a>
+            <a href="https://dierk.github.io/Home">Prof. Dierk König</a>
 		</address>
 	</footer>
 </body>
