docs: make the contributor list more compact

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 		header > * {
 			text-align: 	center;
 		}
+		ul {
+			list-style-type: none;
+			padding-left: 0;
+		}
 
     </style>
     <link rel="shortcut icon" type="image/svg" href="docs/img/logo/logo-60x54.png"/>
@@ -47,26 +51,28 @@
 				  and the completeness of the documentation.
 				  Every contribution must have proven its worth in an application.
               </p>
-      		  <p> Andermatt, Brodwolf:
-				  <a href="https://github.com/mattwolf-corporation/ip6_lambda-calculus-in-js">code</a>,
-				  <a href="https://mattwolf-corporation.gitbook.io/ip5-lambda-calculus/">git book</a>
-              </p>
-      		  <p> Häfliger, Misic:
-				  <a href="https://github.com/fabianhaef/ip6-web-ui-toolkit">code</a>,
-				  <a href="https://dierk.github.io/Home/data/IP6_Bericht_Misic_Häfliger.pdf">documentation.pdf</a>,
-              </p>
-			  <p> Christen, Robin:
-				  <a href="https://github.com/robin-fhnw/IP5-Puerro">code</a>,
-				  <a href="https://robin-christen.gitbook.io/puerro/">git book</a>
-			  </p>
-			  <p> Berchtold, Duss:
-				  <a href="https://www.fhnw.ch/plattformen/bachelor20/IMVS20/index.html">info</a>,
-				  <a href="https://github.com/KDuss/bezel">code</a>,
-				  <a href="https://dierk.github.io/Home/data/Bachelorarbeit_Facettierte_Suche_Duss_Berchtold.pdf"
-				     >documentation.pdf</a>
-			  </p>
-			  <p> Fabian Affolter, Dr. Dieter Holz, François Martin, Marco Sanfratello, Dirk Lemmermann
-			  </p>
+			<ul>
+				<li> Andermatt, Brodwolf:
+				<a href="https://github.com/mattwolf-corporation/ip6_lambda-calculus-in-js">code</a>,
+				<a href="https://mattwolf-corporation.gitbook.io/ip5-lambda-calculus/">git book</a>
+			    </li>
+				<li> Häfliger, Misic:
+					<a href="https://github.com/fabianhaef/ip6-web-ui-toolkit">code</a>,
+					<a href="https://dierk.github.io/Home/data/IP6_Bericht_Misic_Häfliger.pdf">documentation.pdf</a>,
+				</li>
+				<li> Christen, Robin:
+					<a href="https://github.com/robin-fhnw/IP5-Puerro">code</a>,
+					<a href="https://robin-christen.gitbook.io/puerro/">git book</a>
+				</li>
+				<li> Berchtold, Duss:
+					<a href="https://www.fhnw.ch/plattformen/bachelor20/IMVS20/index.html">info</a>,
+					<a href="https://github.com/KDuss/bezel">code</a>,
+					<a href="https://dierk.github.io/Home/data/Bachelorarbeit_Facettierte_Suche_Duss_Berchtold.pdf"
+					>documentation.pdf</a>
+				</li>
+				<li> Fabian Affolter, Dr. Dieter Holz, François Martin, Marco Sanfratello, Dirk Lemmermann
+				</li>
+			</ul>
         </section>
 
 	</main>
