docs: pseudo-commit to gh-pages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <section>
       		  <h2>Under Construction</h2>
       		  <p>
-                  Kolibri and its home page are <a href="https://github.com/webengineering-fhnw/Kolibri/">under construction</a>. Stay tuned.
+                  Kolibri and its home page are <a href="https://github.com/webengineering-fhnw/Kolibri/"
+			      >under construction</a>. Stay tuned.
               </p>
         </section>
 
