--- a/contrib/p6_haefliger_misic/branch-projector-pattern/login/login.html
+++ b/contrib/p6_haefliger_misic/branch-projector-pattern/login/login.html
@@ -7,7 +7,7 @@
   <meta name="robots" content="index,follow">
   <meta name="description" content="">
   <link rel="icon" href="">
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../styles/kolibri/login/login.css">
   <title>Login - Projector Pattern</title>
 </head>
 <body>
