--- a/contrib/p6_haefliger_misic/branch-projector-pattern/register/register.html
+++ b/contrib/p6_haefliger_misic/branch-projector-pattern/register/register.html
@@ -7,13 +7,13 @@
   <meta name="robots" content="index,follow">
   <meta name="description" content="">
   <link rel="icon" href="">
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../styles/kolibri/register/register.css">
   <title>Register - Projector Pattern</title>
 </head>
 <body>
   <div id="register">
     <div class="strength-lines"></div>
-    <div class="pw-criterias"></div>
+    <div class="pw-criteria"></div>
   </div>
 
   <script type="module" src="./registerStarterDev.js"></script>
