add better jsdoc to logger.js

--- a/contrib/p5_wild_wyss/src/logger/example/loggerExample.html
+++ b/contrib/p5_wild_wyss/src/logger/example/loggerExample.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 
-<button id="onOff">On/Off</button>
-<button id="action">Action</button>
+
+<button id="trace">Log Level to trace</button>
+<button id="disable">Disable logging</button>
+<button id="action">Log</button>
 
 <script src="loggerExample.js" type="module"></script>
 
