add appender test file

--- a/contrib/p5_wild_wyss/src/logger/example/loggerExample.html
+++ b/contrib/p5_wild_wyss/src/logger/example/loggerExample.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Logger Example</title>
+    <link rel="shortcut icon" type="image/png" href="../../../../../docs/img/logo/logo-60x54.png"/>
+    <link rel="stylesheet"                     href="../../../../../docs/css/kolibri-base.css">
 </head>
 <body>
 
