add styles to example page

--- a/contrib/p6_brodwolf_andermatt/src/observable/observableExamples/observableHttpGetJokeExample/viewObservableHttpGetJokeExample.html
+++ b/contrib/p6_brodwolf_andermatt/src/observable/observableExamples/observableHttpGetJokeExample/viewObservableHttpGetJokeExample.html
@@ -22,7 +22,7 @@
         margin: 5px;
     }
     button:focus {outline:0;}
-    .buttons {
+    .twoColumnItems {
         background-color: #A0F6F6;
         padding: 1rem;
         border-width: 1px;
@@ -66,7 +66,7 @@
     }
 </style>
 <body>
-<div class="buttons">
+<div class="twoColumnItems">
     <h3>Wanna get a joke? Click a Button</h3>
     <p style="font-size: small; font-style: italic; color: #7a7e7e; padding-bottom: 10px;">We take no responsibility for the content of the generated Jokes.</p>
     <div class="buttonsRow">
