--- a/contrib/p5_wild_wyss/src/logger/example/loggerExample.html
+++ b/contrib/p5_wild_wyss/src/logger/example/loggerExample.html
@@ -62,7 +62,7 @@
             <label class="tooltip" for="appender-string">
                 String
                 <span class="tooltip-content">A String Appender manages all log statement as string
-                        stored in its state. With the getValue() method, each log message will be returned
+                        stored in its state. With the <em>getValue()</em> method, each log message will be returned
                         concatenated with a passed delimiter.
                 </span>
             </label>
@@ -75,8 +75,8 @@
             <input type="radio" id="appender-array" name="appender" value="array">
             <label class="tooltip" for="appender-array">
                 Array
-                <span class="tooltip-content">An Array Appender manages log statement as string in an array.
-                    With the getValue() method, an array will be returned.
+                <span class="tooltip-content">An Array Appender manages log statements in an array.
+                    With the <em>getValue()</em> method, an array will be returned.
                 </span>
             </label>
         </div>
@@ -85,8 +85,7 @@
             <label class="tooltip" for="appender-count">
                 Count
                 <span class="tooltip-content">A Count Appender logs messages to the browsers console.
-                    Simultaneously, a statistic is kept by the appender state. With the getValue() method,
-                    the statistic will be returned as an Object.
+                    Simultaneously, you can obtain a statistic using the <em>getValue()</em> method.
                 </span>
             </label>
         </div>
@@ -102,7 +101,7 @@
         <label class="tooltip" for="context-global">
             Global Logger Context:
             <span class="tooltip-content">The global context enables or disables logger with a matching context.
-                If the global context is more specific than a logger context, the logger's messages will not be processed.
+                If the global context is a prefix of a logger context, the logger's messages will be processed.
             </span>
         </label>
     </div>
