add Observables to the model

--- a/contrib/p5_wild_wyss/src/logger/loggingUi/View.html
+++ b/contrib/p5_wild_wyss/src/logger/loggingUi/View.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="logUi.css" rel="stylesheet">
 </head>
 <body>
-    <div id="logger-ui"></div>
+    <label for="globalContext">Global Context</label>
+    <input id="globalContext" type="text">
+    <div id="loglevel-buttons"></div>
+    <div class="logTextArea" id="logger-ui"></div>
+
     <script src="./starter.js" type="module"></script>
 </body>
 </html>
