--- a/contrib/p5_wild_wyss/src/logger/loggingUi/example/logUiExampleView.html
+++ b/contrib/p5_wild_wyss/src/logger/loggingUi/example/logUiExampleView.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
+
+  <div id="container"></div>
+
+    <script src="example.js" type="module"></script>
 
 </body>
 </html>
