--- a/contrib/p5_wild_wyss/src/logger/loggingUi/example/logUiExampleView.html
+++ b/contrib/p5_wild_wyss/src/logger/loggingUi/example/logUiExampleView.html
@@ -15,11 +15,11 @@
 
         .sidebar {
             position: absolute;
-            top: 0;
-            right: 0;
-            height: 100%;
-            width: 600px;
             background: white;
+            top: 0;
+            height: 100%;
+            right: -605px;
+            width: 600px;
             padding: 20px;
             transition: 0.3s;
             border-left: 3px solid var(--kolibri-color-shadow);
@@ -28,38 +28,40 @@
         .sidebar .toggleButton {
             position: absolute;
             display: flex;
-            justify-content: center;
+            justify-content: start;
             align-items: center;
-            background: white;
-            border-radius: 3px 0 0 3px;
+            border-radius: 5px 0 0 5px;
             width: 2rem;
             height: 2rem;
-            top: 2rem;
+            top: 1rem;
             left: -2rem;
             border: 3px solid var(--kolibri-color-shadow);
             border-right: none;
+            transition: 0.2s;
         }
 
-
         .arrow {
-            border: solid var(--kolibri-color-output);
-            border-width: 0 3px 3px 0;
-            display: inline-block;
-            padding: 5px;
-            width: 5px;
-            height: 5px;
+            background: var(--kolibri-color-output);
+            clip-path: polygon(
+                    75% 10%,
+                    50% 50%,
+                    75% 90%,
+                    50% 90%,
+                    25% 50%,
+                    50% 10%
+            );
             transition: 0.5s;
-            transform: rotate(-45deg);
+            width: 80%;
+            height: 80%;
         }
 
         .sidebar .toggleButton:hover {
             cursor: pointer;
         }
 
-        .left {
+        .arrowLeft {
             transition: 0.5s;
-            transform: rotate(135deg);
-
+            transform: rotate(180deg);
         }
 
         div h2 {
@@ -67,8 +69,13 @@
             justify-content: center;
         }
 
+        .sidebar .toggleButton.open {
+            left: 0;
+            border: none;
+        }
+
         .sidebar.hidden {
-            right: -605px;
+            right: 0;
         }
     </style>
 </head>
@@ -76,20 +83,19 @@
 
     <div class="sidebar" id="sidebar" >
         <div><h2>Ui Logger</h2></div>
-
-        <div class="toggleButton" onclick="move()"><div class="arrow" id="arrow"></div></div>
-        <div id="container">
-
-        </div>
+        <div class="toggleButton" id="btn" onclick="move()"><div class="arrow" id="arrow"></div></div>
+        <div id="container"></div>
     </div>
+
 
     <script>
         const move = () => {
           const container   = document.getElementById("sidebar");
           const arrow       = document.getElementById("arrow");
+          const btn         = document.getElementById("btn");
           container.classList.toggle("hidden");
-          arrow.classList.toggle("left");
-
+          arrow.classList.toggle("arrowLeft");
+          btn.classList.toggle("open");
         };
     </script>
 
