update css of logger example

--- a/contrib/p5_wild_wyss/src/logger/example/loggerExample.html
+++ b/contrib/p5_wild_wyss/src/logger/example/loggerExample.html
@@ -115,7 +115,7 @@
         <input type="text" id="log-msg" value="Log Message">
     </div>
 
-    <div class="twoColumnItems">
+    <div class="twoColumnItem">
         <button style="color:black" id="btn-trace">Trace</button>
         <button style="color:green" id="btn-debug">Debug</button>
         <button style="color:blue" id="btn-info"> Info</button>
@@ -124,7 +124,7 @@
         <button style="color:blueviolet" id="btn-fatal">Fatal</button>
     </div>
 
-    <div class="twoColumnItems">
+    <div class="twoColumnItem">
         <div>
             <label for="log-output">Log Output:</label>
         </div>
