rename files in example folder

--- a/contrib/p5_wild_wyss/src/logger/logUi/example/logUiExampleView.html
+++ b/contrib/p5_wild_wyss/src/logger/logUi/example/logUiExampleView.html
@@ -84,7 +84,7 @@
         };
     </script>
 
-    <script src="example.js" type="module"></script>
+    <script src="logUiExample.js" type="module"></script>
 
 </body>
 </html>
