--- a/contrib/p5_wild_wyss/test/allTest.html
+++ b/contrib/p5_wild_wyss/test/allTest.html
@@ -45,6 +45,8 @@
 <h1>Test Report</h1>
 <div id="out"></div>
 
+
+<p>130 tests expected.</p>
 <p id="grossTotal">Check console for possible errors.</p>
 
 <footer></footer>
