move logger test cases into logger folder

--- a/contrib/p5_wild_wyss/src/logger/test/allTest.html
+++ b/contrib/p5_wild_wyss/src/logger/test/allTest.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title> All Tests </title>
-    <link rel="shortcut icon" type="image/png" href="../../../docs/img/logo/logo-60x54.png"/>
-    <link rel="stylesheet"                     href="../../../docs/css/kolibri-base.css">
+    <link rel="shortcut icon" type="image/png" href="../../../../../docs/img/logo/logo-60x54.png"/>
+    <link rel="stylesheet"                     href="../../../../../docs/css/kolibri-base.css">
     <style>
         body {
             width: 48em;
@@ -50,7 +50,7 @@
 <p id="grossTotal">Check console for possible errors.</p>
 
 <footer></footer>
-<script src="./allTestsSuite.js" type="module"></script>
+<script src="allTestsSuite.js" type="module"></script>
 
 </body>
 </html>
