--- a/contrib/p5_wild_wyss/src/range/test/allTest.html
+++ b/contrib/p5_wild_wyss/src/range/test/allTest.html
@@ -45,6 +45,7 @@
 <h1>Test Report</h1>
 <div id="out"></div>
 
+<p>43 tests expected.</p>
 <p id="grossTotal">Check console for possible errors.</p>
 
 <footer></footer>
