--- a/contrib/p5_wild_wyss/src/focusring/example/SlotMachine.html
+++ b/contrib/p5_wild_wyss/src/focusring/example/SlotMachine.html
@@ -58,10 +58,7 @@
 
 
     const createSlot = content => {
-      const [el] = dom(`
-        <div class="slot"><p>${content}</p></div>
-        `
-      );
+      const [el] = dom(`<div class="slot"><p>${content}</p></div>`);
       return el;
     };
 
