--- a/contrib/p5_wild_wyss/src/focusring/example/SlotMachine.html
+++ b/contrib/p5_wild_wyss/src/focusring/example/SlotMachine.html
@@ -9,25 +9,20 @@
       position: relative;
     }
 
-    #scrollWheel:before {
+    #scrollWheel:before, #scrollWheel:after {
       content: "";
-      height: 60px;
-      width: 60px;
+      height: 50px;
+      width: 50px;
       position: absolute;
       background: white;
       z-index: 1;
     }
     #scrollWheel:after {
-      content: "";
       top: 200px;
-      height: 60px;
-      width: 60px;
-      position: absolute;
-      background: white;
-      z-index: 1;
     }
 
     .slot {
+      box-sizing: border-box;
       position: absolute;
       top: 0;
       left: 0;
@@ -39,7 +34,7 @@
       align-content: center;
       justify-content: center;
       border: 1px solid black;
-      transition: all 200ms linear;
+      transition: all 500ms linear;
     }
 
   </style>
@@ -98,7 +93,7 @@
       setTimeout(() => {el.classList.remove("hide")}, 0);
 
     };
-    document.getElementById("btn").onclick = () => setInterval(() => update(), 200);
+    document.getElementById("btn").onclick = () => setInterval(() => update(), 500);
 
     init();
 
