move all test suites together

--- a/contrib/p5_wild_wyss/allTest.html
+++ b/contrib/p5_wild_wyss/allTest.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title> All Tests </title>
-    <link rel="shortcut icon" type="image/png" href="../../../../../docs/img/logo/logo-60x54.png"/>
-    <link rel="stylesheet"                     href="../../../../../docs/css/kolibri-base.css">
+    <link rel="shortcut icon" type="image/png" href="../../docs/img/logo/logo-60x54.png"/>
+    <link rel="stylesheet"                     href="../../docs/css/kolibri-base.css">
     <style>
         body {
             width: 48em;
@@ -51,7 +51,7 @@
 <footer></footer>
 <script src="allTestsSuite.js" type="module"></script>
 
-<script src="../range.js" type="module"></script>
+<script src="src/range/range.js" type="module"></script>
 
 </body>
 </html>
