--- a/contrib/p5_wild_wyss/src/focusring/example/SlotMachine.html
+++ b/contrib/p5_wild_wyss/src/focusring/example/SlotMachine.html
@@ -1,53 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Slot Machine</title>
+  <meta charset="UTF-8">
+  <title>Slot Machine</title>
   <style>
 
-      #wheels {
-          display: flex;
+      :root {
+          --color: #a90707;
+          --border: 50px solid var(--color);
+          --glow-shadow:
+          0 0 60px 30px #fff,  /* inner white */
+          0 0 100px 60px #f0f, /* middle magenta */
+          0 0 140px 90px #0ff; /* outer cyan */
       }
 
-    .scrollWheel {
-      position: relative;
-        width: 50px;
+      #wheels {
+          height: 250px;
+          width: 150px;
+          display: flex;
+          position: relative;
+          border-left: var(--border);
+          border-right: var(--border);
+      }
 
-    }
+      .scrollWheel {
+          position: relative;
+          width: 50px;
 
-    .scrollWheel:before {
-      content: "";
-      min-height: 250px;
-      width: 50px;
-      position: absolute;
-      background: white;
-      background: linear-gradient(
-                180deg,
-                rgba(255,255,255,1) 20%,
-                rgba(0,0,0,1) 20%,
-                rgba(255,255,255,0) 30%,
-                rgba(255,255,255,0.4) 50%,
-                rgba(255,255,255,0) 70%,
-                rgba(0,0,0,1) 80%,
-                rgba(255,255,255,1) 80%);
-      z-index: 1;
-    }
+      }
 
-    .slot {
-      box-sizing: border-box;
-      position: absolute;
-      top: 0;
-      /*left: 0;*/
-      width: 50px;
-      height: 50px;
-      background: rebeccapurple;
-      color: white;
-      text-align: center;
-      align-content: center;
-      justify-content: center;
-      border: 1px solid black;
-      transition: all 100ms linear;
-    }
+      .scrollWheel:before {
+          content: "";
+          min-height: 250px;
+          width: 50px;
+          position: absolute;
+          background: linear-gradient(
+                  180deg,
+                  var(--color) 20%,
+                  rgba(0, 0, 0, 0.8) 20%,
+                  rgba(255, 255, 255, 0) 30%,
+                  rgba(255, 255, 255, 0.3) 50%,
+                  rgba(255, 255, 255, 0) 70%,
+                  rgba(0, 0, 0, 0.8) 80%,
+                  var(--color) 80%);
+          z-index: 1;
+      }
+
+      .slot {
+          display: flex;
+          align-items: center;
+          font-size: 1.8em;
+          box-sizing: border-box;
+          position: absolute;
+          top: 0;
+          width: 50px;
+          height: 50px;
+          background: rgb(221,	200,	128);
+          color: white;
+          text-align: center;
+          align-content: center;
+          justify-content: center;
+          border-left: 1px solid black;
+          border-bottom: 1px solid grey;
+          transition: all 100ms linear;
+      }
+
+
 
   </style>
 </head>
@@ -56,6 +74,6 @@
 
 <div id="controls"></div>
 <div id="wheels"></div>
-    <script src="scrollWheel.js" type="module"></script>
+<script src="scrollWheel.js" type="module"></script>
 </body>
 </html>
