--- a/contrib/p5_wild_wyss/src/focusring/example/SlotMachine.html
+++ b/contrib/p5_wild_wyss/src/focusring/example/SlotMachine.html
@@ -15,6 +15,12 @@
           0 0 140px 90px #0ff; /* outer cyan */
       }
 
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
       #wheels {
           height: 250px;
           width: 150px;
@@ -48,104 +54,113 @@
       }
 
       .slot {
-          display: flex;
-          align-items: center;
-          font-size: 1.8em;
-          box-sizing: border-box;
-          position: absolute;
-          top: 0;
-          width: 50px;
-          height: 50px;
-          background: var(--secondary-color);
-          color: white;
-          text-align: center;
-          align-content: center;
-          justify-content: center;
-          border-left: 1px solid black;
-          border-bottom: 1px solid grey;
-          transition: all 100ms linear;
+        display: flex;
+        align-items: center;
+        font-size: 1.8em;
+        box-sizing: border-box;
+        position: absolute;
+        top: 0;
+        width: 50px;
+        height: 50px;
+        background: var(--secondary-color);
+        color: white;
+        text-align: center;
+        align-content: center;
+        justify-content: center;
+        border-left: 1px solid black;
+        border-bottom: 1px solid grey;
+        transition: all 100ms linear;
       }
 
 
-      #lever-boundary{
-          position: relative;
-          height: 150px;
+      #lever-boundary {
+        margin-left: 20px;
+        width: 50px;
+        position: relative;
+        height: 180px;
       }
-      #lever {
-          position: absolute;
-          width: 10px;
-          height: 75px;
-          top: 0;
-          background: var(--secondary-color);
+
+      #leverUp {
+        position: absolute;
+        width: 10px;
+        height: 75px;
+        top: 15px;
+        background: var(--secondary-color);
+        border-bottom: 1px solid black;
+      }
+
+      #leverDown {
+        position: absolute;
+        width: 10px;
+        top: 90px;
+        background: var(--secondary-color);
+        visibility: hidden;
+        border-top: 1px solid black;
       }
 
       #knob {
-          z-index: 10;
-          top: -10px;
-          left: -10px;
-          position: absolute;
-          border-radius: 100%;
-          width: 30px;
-          height: 30px;
-          background: var(--color);
+        z-index: 10;
+        left: -10px;
+        position: absolute;
+        border-radius: 100%;
+        width: 30px;
+        height: 30px;
+        background: var(--color);
       }
-
 
   </style>
 </head>
 <body>
-<p id="result"></p>
+  <p id="result"></p>
+  <div id="wheels"></div>
+  <div id="lever-boundary"></div>
+  <script src="starter.js" type="module"></script>
 
-<div id="controls"></div>
-<div id="wheels"></div>
-<script src="starter.js" type="module"></script>
+<!--<script>-->
+<!--  const leverUp     = document.getElementById("leverUp");-->
+<!--  const leverDown   = document.getElementById("leverDown");-->
+<!--  const knob        = document.getElementById("knob");-->
 
-<div id="lever-boundary">
-  <div id="knob"></div>
-  <div id="lever"></div>
-</div>
+<!--  const knobOffset = knob.getBoundingClientRect().height / 2;-->
+<!--  const breaking   = leverUp.getBoundingClientRect().bottom;-->
+<!--  let pull         = false;-->
+<!--  let dy           = 0;-->
+<!--  let mouseDown    = 0;-->
 
-<script>
-  const lever = document.getElementById("lever");
-  const knob = document.getElementById("knob");
+<!--  document.addEventListener('mousemove', evt => {-->
+<!--    if (pull) {-->
+<!--      dy             = evt.clientY - mouseDown;-->
+<!--      knob.style.top = `${dy}px`;-->
 
-  const breaking = lever.getBoundingClientRect().top + lever.getBoundingClientRect().height;
-  let pull = false;
-  let dy = 0;
-  let mouseDown = 0;
-  document.addEventListener('mousemove', evt => {
+<!--      if(evt.clientY < breaking){-->
+<!--        leverUp.style.visibility    = "visible";-->
+<!--        leverUp.style.top           = `${dy+ knobOffset}px`;-->
+<!--        leverUp.style.height        = `${75-dy}px`;-->
+<!--        leverDown.style.visibility  = "hidden";-->
+<!--      } else {-->
+<!--        leverUp.style.visibility    = "hidden";-->
+<!--        leverDown.style.visibility  = "visible";-->
+<!--        leverDown.style.height      = `${dy-75}px`;-->
+<!--      }-->
+<!--    }-->
+<!--  });-->
 
-    if (pull) {
-      dy = evt.clientY - mouseDown;
-      if (dy >= 0){
+<!--  knob.addEventListener('mousedown', evt => {-->
+<!--    if(!pull){-->
+<!--      mouseDown       = evt.clientY;-->
+<!--      knob.style.top  = "";-->
+<!--      pull            = true;-->
+<!--    }-->
+<!--  });-->
 
-        knob.style.top = `${dy}px`;
-
-        if (evt.clientY < breaking){
-          lever.style.top = `${dy}px`;
-          lever.style.height = `${75-dy}px`;
-        } else {
-          lever.style.top = `75px`;
-          lever.style.height = `${dy-75}px`;
-
-        }
-      }
-    }
-  });
-
-  knob.addEventListener('mousedown', evt => {
-    console.log("down", evt);
-    mouseDown = evt.clientY;
-    knob.style.top = "";
-    pull = true;
-  });
-
-  document.addEventListener('mouseup', evt => {
-    console.log("up", evt);
-    pull = false;
-  });
-
-
+<!--  document.addEventListener('mouseup', evt => {-->
+<!--    knob.style.top              = "";-->
+<!--    leverUp.style.top           = "";-->
+<!--    leverUp.style.height        = "75px";-->
+<!--    leverUp.style.visibility    = "visible";-->
+<!--    leverDown.style.visibility  = "hidden";-->
+<!--    pull = false;-->
+<!--  });-->
 </script>
 </body>
 </html>
